src/components/site-pages/search-room/search-room.scss
@import '../../../assets/scss/utils/vars.scss';
@import '../../../assets/scss/utils/mixins.scss';

.search-room-container {
  @include container;

  margin-top: rem(29);
}

.container__room-cards-column {
  margin-top: rem(28);
}

.search-room-options-column {
  min-width: 266px;

  @media screen and (max-width: 640px) {
    position: absolute;
    z-index: 20;
    padding: rem(10);
    background: $defaultColor;
    box-shadow: rem(5) rem(5) rem(10) $DarkShade75;
  }
}

.search-room-options-column-button {
  position: fixed;
  z-index: 20;
  display: none;
  width: rem(40);
  height: rem(40);
  margin-top: rem(90);
  background-color: $defaultColor;
  border: rem(3) solid $DarkShade50;
  border-radius: 50%;
  cursor: pointer;

  &_rotate {
    rotate: 180deg;
  }

  @media (max-width: $smTableWidth) {
    display: block;
  }

  &::after {
    position: relative;
    top: -9px;
    left: rem(11);
    color: $DarkShade50;
    font-weight: bold;
    font-size: rem(30);
    content: '\BB';
  }

  &:hover {
    border-color: $purple;
  }
}

.search-room {
  min-width: rem(266);

  &-sidebar-element {
    margin-bottom: rem(26);
  }
}

.search-room-range-slider-text {
  color: $DarkShade50;
  font-size: rem(12);
  font-family: $secondFont;
  line-height: 21px;
}

.search-room-room-cards {
  width: 100%;
  margin-left: rem(59);

  @media (max-width: $smTableWidth) {
    margin-left: 0;
  }
}

.search-room-room-cards {
  &__caption {
    margin-bottom: rem(22);
    font-family: $secondFont;

    @media (max-width: $desktopWidth) {
      text-align: center;
    }

    @media (max-width: $tableWidth) {
      padding-right: 3vw;
      padding-left: 3vw;
      font-size: calc(0.75rem + 1.5vw);
    }
  }

  &__grid-layout {
    display: grid;
    grid-row-gap: rem(20);
    grid-column-gap: rem(32);
    grid-template-columns: repeat(auto-fill, rem(250));
    width: 100%;

    @media (max-width: $desktopWidth) {
      justify-content: center;
    }
  }

  &__pagination {
    display: flex;
    width: 100%;
    margin-top: rem(43);
    margin-bottom: rem(70);
  }
}

